--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ thead th, tbody td{ padding:.55rem .55rem; }
   /* declare mobile card padding + derived overbleed */
   :root{
     --card-pad: 10px;            /* your mobile .card padding */
-    --bleed: calc(var(--card-pad) + 1px);  /* +1px to hide curve/border seam */
+    --bleed: calc(var(--card-pad));  /* +1px to hide curve/border seam */
   }
 
   /* Ensure cards actually use the variable (keeps things DRY if you change later) */
@@ -607,7 +607,7 @@ thead th, tbody td{ padding:.55rem .55rem; }
 #by-team .table-wrap > table,
 #by-date .table-wrap > table,
 #g-standings-table {
-  width: 99.0%;   /* was 100% via the global table rule */
+  width: 100.0%;   /* was 100% via the global table rule */
   margin: 0 auto; /* centers so both vertical edges align cleanly */
 }
 
@@ -617,7 +617,7 @@ thead th, tbody td{ padding:.55rem .55rem; }
   #by-team .table-wrap > table,
   #by-date .table-wrap > table,
   #g-standings-table {
-    width: 99%;
+    width: 100%;
   }
 }
 
